HW6_k3d_stateful_app/k8s/backend.yml
apiVersion: v1

kind: Service
metadata:
  name: go-backend
spec:
  selector:
    app: go-backend
  ports:
    - port: 8080

---
apiVersion: apps/v1

kind: Deployment
metadata:
  name: go-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-backend
  template:
    metadata:
      labels:
        app: go-backend
    spec:
      containers:
      - name: go-backend
        image: go-app:local
        ports:
        - containerPort: 8080
