HW6_k3d_stateful_app/k8s/frontend.yml
apiVersion: v1

kind: Service
metadata:
  name: html-frontend
spec:
  selector:
    app: html-frontend
  ports:
    - port: 80

---
apiVersion: apps/v1

kind: Deployment
metadata:
  name: html-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-frontend
  template:
    metadata:
      labels:
        app: html-frontend
    spec:
      containers:
      - name: html-frontend
        image: html-app:local
        ports:
        - containerPort: 80
